# mpi-rma-static-analysis

./: .gitignore  CMakeLists.txt  LICENSE.txt  PHASAR_LICENSE.txt  README.md
src/: AnalysisController.cpp  AnalysisController.h  ApplicationRunContext.h  BlockClassification.cpp  BlockClassification.h  BranchPipe.h  CommSynchronizationCheck.cpp  CommSynchronizationCheck.h  ConcurrentCommCheck.cpp  ConcurrentCommCheck.h  DynamicMemoryRequestCheck.cpp  DynamicMemoryRequestCheck.h  EpochMatcher.cpp  EpochMatcher.h  Fact.cpp  Fact.h  FactKiller.cpp  FactKiller.h  FenceFlagCheck.cpp  FenceFlagCheck.h  GraphSlicer.cpp  GraphSlicer.h  InstructionDump.cpp  InstructionDump.h  LLVMBasedMICFG.cpp  LLVMBasedMICFG.h  LazyBranchPipe.h  LazyFact.cpp  LazyFact.h  LazyFactKiller.cpp  LazyFactKiller.h  LazyMPIRMAUseProblem.cpp  LazyMPIRMAUseProblem.h  LazySymbolicExecutor.cpp  LazySymbolicExecutor.h  LazyWindowCreator.cpp  LazyWindowCreator.h  LazyWindowSheet.cpp  LazyWindowSheet.h  MOTFResolver.cpp  (+42 more)
tests/: mpi_win_barrier.cpp  mpi_win_barrier.ll  mpi_win_barriers.cpp  mpi_win_barriers.ll  mpi_win_comm_kill.cpp  mpi_win_comm_kill.ll  mpi_win_concurrent_local.cpp  mpi_win_concurrent_local.ll  mpi_win_concurrent_shared_local.cpp  mpi_win_concurrent_shared_local.ll  mpi_win_do_loop.cpp  mpi_win_do_loop.ll  mpi_win_dyn_memory.cpp  mpi_win_dyn_memory.ll  mpi_win_fence_flags.cpp  mpi_win_fence_flags.ll  mpi_win_fortran.f90  mpi_win_fortran.ll  mpi_win_incompat_mode.cpp  mpi_win_incompat_mode.ll  mpi_win_interproc.cpp  mpi_win_interproc.ll  mpi_win_interproc_comm.cpp  mpi_win_interproc_comm.ll  mpi_win_interproc_ptr.ll  mpi_win_lock_all_fence.cpp  mpi_win_lock_all_fence.ll  mpi_win_lock_all_fence2.cpp  mpi_win_lock_all_fence2.ll  mpi_win_loop.cpp  mpi_win_loop.ll  mpi_win_loop2.cpp  mpi_win_loop2.ll  mpi_win_no_expose.cpp  mpi_win_no_expose.ll  mpi_win_parallel.cpp  mpi_win_parallel.ll  mpi_win_rank_dynamic.cpp  mpi_win_rank_dynamic.ll  mpi_win_rank_merging.cpp  (+22 more)
